# SampleFlow

./: .gitignore  CMakeLists.txt  README.md  SampleFlowconfig.cmake.in  TODO  mcmc.h  mcmc_test  mcmc_test.cc  mcpmc.h
.github/workflows/: SampleFlow-test.yml
doc/: CMakeLists.txt  Makefile  indent  notes  options.dox  references.bib
include/sampleflow/: auxiliary_data.h  auxiliary_data.impl.h  concepts.h  concepts.impl.h  config.h  connections.h  connections.impl.h  consumer.h  consumer.impl.h  element_access.h  element_access.impl.h  filter.h  filter.impl.h  parallel_mode.h  parallel_mode.impl.h  producer.h  producer.impl.h  scope_exit.h  scope_exit.impl.h  types.h  types.impl.h
include/sampleflow/consumers/: acceptance_ratio.h  acceptance_ratio.impl.h  action.h  action.impl.h  auto_covariance_matrix.h  auto_covariance_matrix.impl.h  auto_covariance_trace.h  auto_covariance_trace.impl.h  autocovariance_dim_1.h  average_cosinus.h  average_cosinus.impl.h  count_samples.h  count_samples.impl.h  covariance_matrix.h  covariance_matrix.impl.h  histogram.h  histogram.impl.h  last_sample.h  last_sample.impl.h  maximum_probability_sample.h  maximum_probability_sample.impl.h  mean_value.h  mean_value.impl.h  pair_histogram.h  pair_histogram.impl.h  spurious_autocovariance.h  spurious_autocovariance_dim_n.h  stream_output.h  stream_output.impl.h
include/sampleflow/filters/: component_splitter.h  component_splitter.impl.h  condition.h  condition.impl.h  conversion.h  conversion.impl.h  discard_first_n.h  discard_first_n.impl.h  pass_through.h  pass_through.impl.h  take_every_nth.h  take_every_nth.impl.h
include/sampleflow/producers/: delayed_rejection_mh.h  delayed_rejection_mh.impl.h  differential_evaluation_mh.h  differential_evaluation_mh.impl.h  metropolis_hastings.h  metropolis_hastings.impl.h  range.h  range.impl.h
source/: consumers.cc  core.cc  filters.cc  producers.cc  sampleflow.cc
tests/: CMakeLists.txt  README.md  acceptance_ratio_01  acceptance_ratio_01.cc  acceptance_ratio_02.cc  acceptance_ratio_03.cc  action_01.cc  adaptive_mh_01.cc  adaptive_mh_01.output  auto_covariance_matrix_00.cc  auto_covariance_matrix_00_vector_01.cc  auto_covariance_matrix_00_vector_01.output  auto_covariance_matrix_00_vector_02.cc  auto_covariance_matrix_00_vector_03.cc  auto_covariance_matrix_00_vector_03.output  auto_covariance_matrix_01.cc  auto_covariance_matrix_02.cc  auto_covariance_matrix_02_scalar.cc  auto_covariance_matrix_02_vector.cc  auto_covariance_matrix_02_vector.output  auto_covariance_matrix_03.cc  auto_covariance_matrix_05.cc  auto_covariance_trace_00.cc  auto_covariance_trace_00.output  auto_covariance_trace_00_vector_01.cc  auto_covariance_trace_00_vector_02.cc  auto_covariance_trace_00_vector_02.output  auto_covariance_trace_00_vector_03.cc  auto_covariance_trace_00_vector_03.output  auto_covariance_trace_01.cc  auto_covariance_trace_01.output  auto_covariance_trace_02.cc  auto_covariance_trace_02.output  auto_covariance_trace_02_scalar.cc  auto_covariance_trace_02_scalar.output  auto_covariance_trace_02_vector.cc  auto_covariance_trace_03.cc  auto_covariance_trace_03.output  auto_covariance_trace_05.cc  auto_covariance_trace_05.output  (+132 more)
